all links work and go to the right section, fixed spacing in code

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,13 @@ html, body {
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 1rem;
-    background-color: #efefef;
-    text-align: center;
+    padding: 5rem;
+    background-color: grey;
+    
+}
+
+.about {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
